@@ -1,4 +1,5 @@
 current:
+  * add python distutils build infrastructure
   * first pass working iPhone "widget"
 
 version 0.10:
